I removed the centering of My Contacts in my contact page.

--- a/Agarwal_ContactMe.html
+++ b/Agarwal_ContactMe.html
@@ -33,7 +33,7 @@ header{ background-color:#B1A296;}
 
           <section class="jumbotron text-center">
 
-           <center> <h1>My Contacts</h1></center><br>
+           <h1>My Contacts</h1>
  <br>
  </section>
  <center> <h2>Email Adress: Yashagarwal314@gmail.com</h2></center><br>
